Fixed grid spacing

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 
 section {
@@ -99,7 +100,6 @@ footer p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  margin-right: 25px;
   opacity: 0.6;
 }
 
